chemin fichier pointage spécifié dans le notebook

--- a/tp-vecteur-vitesse-eleve.ipynb
+++ b/tp-vecteur-vitesse-eleve.ipynb
@@ -42,17 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t= [0.0, 864000.0, 1728000.0, 2592000.0, 3456000.0, 4320000.0, 5184000.0, 6048000.0, 6912000.0, 7776000.0, 8640000.0, 9504000.0, 10368000.0, 11232000.0, 12096000.0, 12960000.0, 13824000.0, 14688000.0, 15552000.0, 16416000.0]\n",
+      "x= [108000000000.0, 103000000000.0, 89000000000.0, 68500000000.0, 42600000000.0, 13400000000.0, -16800000000.0, -45800000000.0, -71100000000.0, -90700000000.0, -103000000000.0, -108000000000.0, -103000000000.0, -91200000000.0, -71800000000.0, -46900000000.0, -18400000000.0, 11600000000.0, 40600000000.0, 66600000000.0]\n",
+      "y= [5190000000.0, 34700000000.0, 61500000000.0, 83600000000.0, 99100000000.0, 107000000000.0, 106000000000.0, 97200000000.0, 80500000000.0, 57400000000.0, 29700000000.0, -290000000.0, -30300000000.0, -57900000000.0, -81000000000.0, -97800000000.0, -107000000000.0, -108000000000.0, -101000000000.0, -86100000000.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "from tkinter import *\n",
-    "from tkinter.filedialog import askopenfilename\n",
+    "#from tkinter import *\n",
+    "#from tkinter.filedialog import askopenfilename\n",
     "\n",
-    "root = Tk()\n",
+    "#root = Tk()\n",
     "#on peut donner le chemin d'accès vers le fichier ou la fonction askopenfilename\n",
-    "name = askopenfilename(parent=root, filetypes =((\"Fichier CSV\", \"*.csv\"),(\"Fichier Texte\",\"*.txt\") , (\"Tous les fichiers\",\"*.*\")),title = \"Choisir un fichier\")\n",
-    "root.destroy()\n",
+    "#name = askopenfilename(parent=root, filetypes =((\"Fichier CSV\", \"*.csv\"),(\"Fichier Texte\",\"*.txt\") , (\"Tous les fichiers\",\"*.*\")),title = \"Choisir un fichier\")\n",
+    "#root.destroy()\n",
+    "#le fichier doit être dans le même dossier que le notebook\n",
+    "name=\"venus.csv\"\n",
     "\n",
     "sep = \";\" #caractère séparateur du csv -peut être une virgule, un point-virgule ou une tabulation noté \\t \n",
     "entete = 1 #nombre de lignes d'entete\n",
@@ -718,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
