ajout objectif et contexte

--- a/tp-vecteur-vitesse-eleve.ipynb
+++ b/tp-vecteur-vitesse-eleve.ipynb
@@ -23,6 +23,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Objectifs\n",
+    "\n",
+    "* Savoir tracer une courbes en nuage de points en python afin d'obtenir la trajectoire d'un mouvement.\n",
+    "* Représenter des vecteurs vitesse et des vecteurs variation de vecteurs vitesse d’un système modélisé par un point lors d’un mouvement en python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Présentation du contexte\n",
+    "\n",
+    "Vénus est une des quatre planètes telluriques du Système solaire. Elle est la deuxième planète par ordre d'éloignement au Soleil, et la sixième par masse ou par taille décroissantes (la Terre est la troisième plus proche et la cinquième plus grande, tant en taille qu'en masse).\n",
+    "\n",
+    "On étudie le mouvement du centre de Vénus dans le référentiel héliocentrique : on a enregistré les position du centre de Vénus tous les t=10 jours dans un fichier nommé venus.csv. L'origine du repère correspond au centre du soleil."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Récupération des données\n",
     "\n",
     "On récupère les données t, x y à l'aide d'un export de pointage de vidéos\n",
@@ -56,13 +77,7 @@
     }
    ],
    "source": [
-    "#from tkinter import *\n",
-    "#from tkinter.filedialog import askopenfilename\n",
-    "\n",
-    "#root = Tk()\n",
-    "#on peut donner le chemin d'accès vers le fichier ou la fonction askopenfilename\n",
-    "#name = askopenfilename(parent=root, filetypes =((\"Fichier CSV\", \"*.csv\"),(\"Fichier Texte\",\"*.txt\") , (\"Tous les fichiers\",\"*.*\")),title = \"Choisir un fichier\")\n",
-    "#root.destroy()\n",
+    "#ouverture du fichier contenant les données de trajectoire\n",
     "#le fichier doit être dans le même dossier que le notebook\n",
     "name=\"venus.csv\"\n",
     "\n",
