--- a/tp-vecteur-vitesse-eleve.ipynb
+++ b/tp-vecteur-vitesse-eleve.ipynb
@@ -63,19 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t= [0.0, 864000.0, 1728000.0, 2592000.0, 3456000.0, 4320000.0, 5184000.0, 6048000.0, 6912000.0, 7776000.0, 8640000.0, 9504000.0, 10368000.0, 11232000.0, 12096000.0, 12960000.0, 13824000.0, 14688000.0, 15552000.0, 16416000.0]\n",
-      "x= [108000000000.0, 103000000000.0, 89000000000.0, 68500000000.0, 42600000000.0, 13400000000.0, -16800000000.0, -45800000000.0, -71100000000.0, -90700000000.0, -103000000000.0, -108000000000.0, -103000000000.0, -91200000000.0, -71800000000.0, -46900000000.0, -18400000000.0, 11600000000.0, 40600000000.0, 66600000000.0]\n",
-      "y= [5190000000.0, 34700000000.0, 61500000000.0, 83600000000.0, 99100000000.0, 107000000000.0, 106000000000.0, 97200000000.0, 80500000000.0, 57400000000.0, 29700000000.0, -290000000.0, -30300000000.0, -57900000000.0, -81000000000.0, -97800000000.0, -107000000000.0, -108000000000.0, -101000000000.0, -86100000000.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ouverture du fichier contenant les données de trajectoire\n",
     "#le fichier doit être dans le même dossier que le notebook\n",
@@ -171,8 +161,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <div class = \"alert alert-info\">\n",
-    "Tracer la trajectoire en nuage de point (c'est à dire l'altitude en fonction du temps)  avec le titre des axes et le titre du graphique.  La taille du graphique sera un carré de 10 pouces de côté"
+    "<div class = \"alert alert-info\">\n",
+    "Tracer la trajectoire en nuage de point, c'est à dire y (en ordonnée) en fonction de x (en abscisse)  avec le titre des axes et le titre du graphique.  \n",
+    "    \n",
+    "La taille du graphique sera un carré de 10 pouces de côté"
    ]
   },
   {
@@ -381,7 +373,7 @@
     "vx=[]\n",
     "vy=[]\n",
     "\n",
-    "for i in range(len(y)-2): #len(y) correspond au nombre de valeur de la liste y. On utilise len(y)-2 car la liste est numérotée à partir du rang 0 jusqu'au rang len(y)-1 et qu'on utilise la valeur y[i+1] \n",
+    "for i in range(len(y)-1): #len(y) correspond au nombre de valeur de la liste y. On utilise len(y)-1 car la liste est numérotée à partir du rang 0 jusqu'au rang len(y)-1 et qu'on utilise la valeur y[i+1] \n",
     "    vx.append((x[i+1]-x[i])/(t[i+1] - t[i])) # calcul de l'abscisse du vecteur vitesse \n",
     "# calcul de l'ordonnée du vecteur vitesse vitesse.\n",
     "     \n"
