modification partie pointage

--- a/tp-energie-meca-version-expert.ipynb
+++ b/tp-energie-meca-version-expert.ipynb
@@ -54,6 +54,7 @@
     "        - pointer le centre du ballon : : commencer le pointage lorsque le ballon n'est plus dans les mains du lanceur et **l'arrêter lorsque le ballon est au point haut de la trajectoire**.\n",
     "         \n",
     "    2. exporter vos données (menu Fichiers/Mesures/Enregistrer dans un fichier/format*.txt) : mettre votre prenom et nom comme titre du fichier et choisir \";\" comme séparateur.\n",
+    "    3. Déposer votre fichier sur binder : https://mybinder.org/v2/gh/olivierLt/1spe/main (cliquer sur le bouton \"upload\" \"puis téléverser\")\n",
     "\n",
     "\n",
     "2. Les données sont en mémoire dans des listes python appelées t, x et y"
