modification partie pointage

--- a/tp-energie-meca-version-base.ipynb
+++ b/tp-energie-meca-version-base.ipynb
@@ -55,7 +55,7 @@
     "         \n",
     "    2. exporter vos données (menu Fichiers/Mesures/Enregistrer dans un fichier/format*.txt) : mettre votre prenom et nom comme titre du fichier et choisir \";\" comme séparateur.\n",
     "     \n",
-    "    3. Déposer votre fichier sur binder : https://mybinder.org/v2/gh/olivierLt/1spe/main (cliquer sur le bouton \"upload\" \"puis téléverser\")\n",
+    "    3. Déposer votre fichier sur binder :cliquer sur le bouton \"upload\" \"puis téléverser\".\n",
     "\n",
     "\n",
     "2. Les données sont en mémoire dans des listes python appelées t, x et y"
